cargo-features = ["strip"]

[package]
name = "dro138"
version = "0.1.0"
authors = ["allie"]
edition = "2018"
build = "build.rs"

[dependencies]
ili9341 = "0.3.0"
embedded-hal = "0.2.3"
cortex-m-rt = "0.6.12"
#dro138_derive = { path = "./dro138_derive" } superceded by hal

# todo don't need b/c pulled in by hal?
[dependencies.stm32f1]
version = "0.11.0"
features = ["stm32f103"]

[dependencies.stm32f1xx-hal]
version = "0.6.0"
features = ["stm32f103", "rt"]

[build-dependencies]
bindgen = "0.54.0"

[profile.release]
opt-level = "z"  # Optimize for size.
strip = "symbols"