cargo-features = ["strip"]

[package]
name = "dro138"
version = "0.1.0"
authors = ["allie"]
edition = "2018"
build = "build.rs"

[dependencies]
ili9341 = "0.3.0"
embedded-hal = "0.2.3" # is real?
nb = "0.1.2"
cortex-m = "0.6.2"
panic-halt = "0.2.0"

[dependencies.stm32f1]
version = "0.11.0"
features = ["stm32f103", "rt"]

[dependencies.cortex-m-rt]
version = "0.6.12"
features= ["device"]

[dependencies.stm32f1xx-hal]
version = "0.6.0"
features = ["rt", "stm32f103", "medium"]

[build-dependencies]
bindgen = "0.54.0"

[profile.release]
opt-level = "z"  # Optimize for size.
strip = "symbols"

#dro138_derive = { path = "./dro138_derive" } superceded by hal
